# M1zz1_Voice_bot

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE  README.md
tests/: _fake_capture.py  test_assets.py  test_hotkey.py  test_live.py  test_live_window.py  test_output_mode.py  test_overlay_lifecycle.py  test_parent_no_coreaudio.py  test_permissions.py  test_recorder_lifecycle.py  test_recorder_subprocess.py  test_relaunch.py  test_unload.py
voicebot/: VoiceBot.spec  animations.py  app.py  autostart.py  build_app.sh  build_assets.py  com.mizz.voicebot.plist  config.py  entitlements.plist  focus.py  hotkey.py  install.sh  live_transcribe.py  logger_setup.py  main.py  overlay.py  paster.py  permissions.py  pyproject.toml  recorder.py  relaunch.py  requirements.txt  settings_window.py  sounds.py  transcriber.py  whisper_engine.py
voicebot/assets/: VoiceBot.icns
